// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileProperties Form/TextArea Disabled 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  min-width: 0;
  max-width: 100%;
  height: auto;
  min-height: 32px;
  padding: 4px 11px;
  overflow: auto;
  font-size: 14px;
  font-feature-settings: 'tnum';
  line-height: 1.5715;
  color: rgba(0,0,0,0.65);
  vertical-align: bottom;
  resize: vertical;
  border: 1px solid #d9d9d9;
  border-radius: 2px;
}

.c0::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c0::-moz-placeholder {
  color: #bfbfbf;
}

.c0:-ms-input-placeholder {
  color: #bfbfbf;
}

.c0::placeholder {
  color: #bfbfbf;
}

.c0:hover {
  border-color: #40a9ff;
  border-right-width: 1px;
}

.c0:focus {
  border-color: #40a9ff;
  border-right-width: 1px;
  outline: 0;
  box-shadow: 0 0 0 2px rgba(24,144,255,0.2);
}

.c0[disabled] {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: #f5f5f5;
  opacity: 1;
}

.c0[disabled]:hover {
  border-color: #d9d9d9;
}

<textarea
  className="c0"
  disabled={true}
  rows={4}
/>
`;

exports[`FileProperties Form/TextArea Readonly 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  min-width: 0;
  max-width: 100%;
  height: auto;
  min-height: 32px;
  padding: 4px 11px;
  overflow: auto;
  font-size: 14px;
  font-feature-settings: 'tnum';
  line-height: 1.5715;
  color: rgba(0,0,0,0.65);
  vertical-align: bottom;
  resize: vertical;
  border: 1px solid #d9d9d9;
  border-radius: 2px;
}

.c0::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c0::-moz-placeholder {
  color: #bfbfbf;
}

.c0:-ms-input-placeholder {
  color: #bfbfbf;
}

.c0::placeholder {
  color: #bfbfbf;
}

.c0:hover {
  border-color: #40a9ff;
  border-right-width: 1px;
}

.c0:focus {
  border-color: #40a9ff;
  border-right-width: 1px;
  outline: 0;
  box-shadow: 0 0 0 2px rgba(24,144,255,0.2);
}

.c0[disabled] {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: #f5f5f5;
  opacity: 1;
}

.c0[disabled]:hover {
  border-color: #d9d9d9;
}

<textarea
  className="c0"
  readOnly={true}
  rows={4}
  value="Readonly textarea"
/>
`;

exports[`FileProperties Form/TextArea With Handlers 1`] = `
Array [
  .c0 {
  box-sizing: border-box;
  width: 100%;
  min-width: 0;
  max-width: 100%;
  height: auto;
  min-height: 32px;
  padding: 4px 11px;
  overflow: auto;
  font-size: 14px;
  font-feature-settings: 'tnum';
  line-height: 1.5715;
  color: rgba(0,0,0,0.65);
  vertical-align: bottom;
  resize: vertical;
  border: 1px solid #d9d9d9;
  border-radius: 2px;
}

.c0::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c0::-moz-placeholder {
  color: #bfbfbf;
}

.c0:-ms-input-placeholder {
  color: #bfbfbf;
}

.c0::placeholder {
  color: #bfbfbf;
}

.c0:hover {
  border-color: #40a9ff;
  border-right-width: 1px;
}

.c0:focus {
  border-color: #40a9ff;
  border-right-width: 1px;
  outline: 0;
  box-shadow: 0 0 0 2px rgba(24,144,255,0.2);
}

.c0[disabled] {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: #f5f5f5;
  opacity: 1;
}

.c0[disabled]:hover {
  border-color: #d9d9d9;
}

<textarea
    className="c0"
    onBlur={[Function]}
    onChange={[Function]}
    rows={4}
  />,
  <p>
    OnChange value: 
    <span
      id="onchange_value"
    />
  </p>,
  <p>
    OnBlur value: 
    <span
      id="onblur_value"
    />
  </p>,
]
`;

exports[`FileProperties Form/TextArea With Placeholder 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  min-width: 0;
  max-width: 100%;
  height: auto;
  min-height: 32px;
  padding: 4px 11px;
  overflow: auto;
  font-size: 14px;
  font-feature-settings: 'tnum';
  line-height: 1.5715;
  color: rgba(0,0,0,0.65);
  vertical-align: bottom;
  resize: vertical;
  border: 1px solid #d9d9d9;
  border-radius: 2px;
}

.c0::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c0::-moz-placeholder {
  color: #bfbfbf;
}

.c0:-ms-input-placeholder {
  color: #bfbfbf;
}

.c0::placeholder {
  color: #bfbfbf;
}

.c0:hover {
  border-color: #40a9ff;
  border-right-width: 1px;
}

.c0:focus {
  border-color: #40a9ff;
  border-right-width: 1px;
  outline: 0;
  box-shadow: 0 0 0 2px rgba(24,144,255,0.2);
}

.c0[disabled] {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: #f5f5f5;
  opacity: 1;
}

.c0[disabled]:hover {
  border-color: #d9d9d9;
}

<textarea
  className="c0"
  placeholder="ページIDを入力"
  rows={4}
/>
`;

exports[`FileProperties Form/TextArea With Value 1`] = `
.c0 {
  box-sizing: border-box;
  width: 100%;
  min-width: 0;
  max-width: 100%;
  height: auto;
  min-height: 32px;
  padding: 4px 11px;
  overflow: auto;
  font-size: 14px;
  font-feature-settings: 'tnum';
  line-height: 1.5715;
  color: rgba(0,0,0,0.65);
  vertical-align: bottom;
  resize: vertical;
  border: 1px solid #d9d9d9;
  border-radius: 2px;
}

.c0::-webkit-input-placeholder {
  color: #bfbfbf;
}

.c0::-moz-placeholder {
  color: #bfbfbf;
}

.c0:-ms-input-placeholder {
  color: #bfbfbf;
}

.c0::placeholder {
  color: #bfbfbf;
}

.c0:hover {
  border-color: #40a9ff;
  border-right-width: 1px;
}

.c0:focus {
  border-color: #40a9ff;
  border-right-width: 1px;
  outline: 0;
  box-shadow: 0 0 0 2px rgba(24,144,255,0.2);
}

.c0[disabled] {
  color: rgba(0,0,0,0.25);
  cursor: not-allowed;
  background-color: #f5f5f5;
  opacity: 1;
}

.c0[disabled]:hover {
  border-color: #d9d9d9;
}

<textarea
  className="c0"
  defaultValue="Some value
One more line"
  rows={4}
/>
`;
